# behemoth-fastapi

./: .env_sample  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  alembic.ini  app.db  auto-module.py  docker-compose.yml  pyproject.toml  pytest.ini  railway.toml  requirements.txt  ruff.toml  start.sh  test.db  test.py
alembic/: env.py  script.py.mako
alembic/versions/: 534b0368f1ef_create_authors.py  791f44b3d956_create_books.py  98d97bd4d6a9_add_role_column_to_users.py  c3a0db5a062a_create_users_table.py
app/: auth_utils.py  main.py
app/api/v1/: admin.py  auth.py
app/author/: apis.py  crud.py  exceptions.py  formatters.py  models.py  selectors.py  services.py
app/author/schemas/: base.py  create.py  response.py
app/common/: annotations.py  auth.py  auth_routes.py  cache.py  crud.py  dependencies.py  exceptions.py  paginators.py  schemas.py  security.py  types.py  utils.py
app/core/: database.py  handlers.py  security.py  settings.py  tags.py
app/models/: user.py
app/sample_module/: apis.py
app/sample_module/routes/: base.py
app/schemas/: auth.py  user.py
docs/: ENV.md
hook_scripts/: check_route_names.py
migrations/: env.py
