[project]
name = "behemoth-fastapi"
version = "0.1.0"
description = "FastAPI template for engineers building complex applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "astroid==3.3.6",
    "asyncpg==0.29.0",
    "certifi==2024.7.4",
    "cffi==1.17.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "dill==0.3.9",
    "dnspython==2.6.1",
    "email-validator==2.2.0",
    "fastapi==0.111.0",
    "fastapi-cli==0.0.4",
    "fastapi-limiter>=0.1.6",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "httpx==0.27.0",
    "idna==3.7",
    "isort==5.13.2",
    "jinja2==3.1.4",
    "logfire[asyncpg,fastapi]>=3.16.1",
    "mako==1.3.5",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "orjson==3.10.6",
    "platformdirs==4.3.6",
    "pre-commit>=4.3.0",
    "pycparser==2.22",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pydantic-settings==2.3.4",
    "pygments==2.18.0",
    "pyjwt==2.9.0",
    "pylint==3.3.2",
    "pylint-plugin-utils==0.8.2",
    "pylint-pydantic==0.3.4",
    "pymongo>=4.13.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "pyyaml==6.0.1",
    "rich==13.7.1",
    "ruff>=0.12.12",
    "secure>=1.0.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.31",
    "starlette==0.37.2",
    "tomlkit==0.13.2",
    "ty>=0.0.13",
    "typer==0.12.3",
    "typing-extensions==4.12.2",
    "ujson==5.10.0",
    "uvicorn==0.30.1",
    "watchfiles==0.22.0",
    "websockets==12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
